Fixed gradient moving behind incorrectly

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,6 @@ a {
 }
 
 body {
-  background: #000000;
   min-height: 100vh;
 }
 
